--- a/config/web/fichier_conf/sites-available/www.conf
+++ b/config/web/fichier_conf/sites-available/www.conf
@@ -1,7 +1,8 @@
 <VirtualHost *:80>
 	
-	#Nom du serveur vitrine (www)
+	#Nom du serveur vitrine, port etc pour création de l'URL  (www)
 	ServerName www.l2-8.ephec-ti.be
+	
 	# Route vers le fichier qui sera afficher à l'adresse du serveur name.
         DocumentRoot /var/www/html/www/
 	
