--- a/config/web/fichier_conf/sites-available/b2b.conf
+++ b/config/web/fichier_conf/sites-available/b2b.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
 
-	#Nom du serveur à joindre pour le site dynamique (Fournisseur)
+	#Nom du serveur à joindre pour le site dynamique, URL (b2b, pour les fournisseurs)
 	ServerName b2b.l2-8.ephec-ti.be
 	
 	#Route -> /var/www/html/b2b/ pour les fichiers lié à l'adresse b2b.
